manifests/dev/deployment.yaml
# 创建 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fun-service
  labels:
    app: fun-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fun-service
  template:
    metadata:
      labels:
        app: fun-service
    spec:
      serviceAccountName: fun
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aliyun-docker-secret
      containers:
        - name: fun-service
          image: ${SERVICE_IMAGE}
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /application.yaml
              subPath: application.yaml
      volumes:
        - name: config
          configMap:
            name: fun-service-config
            items:
              - key: application.yaml
                path: application.yaml
