manifests/dev/ingress.yaml
# 创建 Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fun-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: fun-service
              servicePort: 80
      host: fun.dustlight.cn
